--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 markdown: redcarpet
-baseurl: 
+baseurl: http://svet666.github.io/vartopia
 exclude: ['README.md']
 permalink: pretty
 # this is a comment
